Mon Dec  4 20:49:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* Makefile.in: Change `-nostartfiles' to `-nostdlib' to avoid
	automatic linking with default libraries when linking new-cygwin1.dll.
	Link with libgcc.a and libstdc++.a explicitly.

Sun Dec  3 01:20:25 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (normalize_win32_path): Handle UNC paths better.
	(slash_unc_prefix_p): Allow backslash UNC paths.

Sun Dec  3 00:20:25 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Remove some extra cruft.

Sun Dec  3 00:13:26 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Use CXX to build the DLL.
	* configure.in: Find correct c++ compiler.
	* configure: Regenerate.
	* path.cc (normalize_posix_path): Put correct drive at beginning of \foo style paths.
	(chdir): Don't send non-posix path to cygcwd.set.

Sat Dec  2 22:26:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (get_inet_addr ): Close AF_UNIX socket file after reading.

Wed Nov 29 18:25:53 2000  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* cygheap.cc (chgheap_root::operator =): Check root dir properly.

Thu Nov 29 18:11:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (cygwin_inet_aton): Return nonzero if the address
	is valid, zero if not according to Linux man page.

Mon Nov 27 21:09:50 2000  Kelley Cook <kelley.cook@home.com>

	* mmap.cc (munmap): Check that mmap and munmap length match.

Tue Nov 28 18:08:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_disk_file::open): Check for buggy CreateFile
	condition.
	* path.cc (path_conv::check): Get file system type in call to
	GetVolumeInformation to check for file systems with buggy CreateFile.
	* path.h (enum path_types): Add PATH_HASBUGGYOPEN.
	(class path_conv): Add methods `has_buggy_open' and
	`set_has_buggy_open'.

Sun Nov 26 16:26:14 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler.cc (is_at_eof): New function.